--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,8 +25,7 @@
             "single"
         ],
         "semi": [
-            "error",
-            "never"
+            "error"
         ],
         "no-var": [
             "error"
