--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "adm-zip": "^0.5.9",
     "async": "^3.2.4",
     "axios": "^1.4.0",
-    "azuriom-auth": "^1.0.1",
     "discord-rpc-patch": "^4.0.1",
     "ejs": "^3.1.8",
     "ejs-electron": "^2.1.1",
@@ -38,6 +37,7 @@
     "got": "^11.8.5",
     "helios-core": "~0.1.2",
     "jquery": "^3.6.1",
+    "minecraft-java-core": "^3.5.7",
     "node-disk-info": "^1.3.0",
     "node-stream-zip": "^1.15.0",
     "request": "^2.88.2",
